--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "bundle/tabular"]
 	path = bundle/tabular
 	url = https://github.com/godlygeek/tabular.git
+[submodule "bundle/snippet.vim"]
+	path = bundle/snippet.vim
+	url = https://github.com/vim-scripts/snippet.vim.git
