--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,6 @@
 [submodule "bundle/ctrlp.vim"]
 	path = bundle/ctrlp.vim
 	url = https://github.com/kien/ctrlp.vim.git
+[submodule "bundle/vim-actionscript"]
+	path = bundle/vim-actionscript
+	url = https://github.com/jeroenbourgois/vim-actionscript.git
