--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "bundle/ctrlp.vim"]
 	path = bundle/ctrlp.vim
 	url = https://github.com/kien/ctrlp.vim.git
+[submodule "bundle/ctrlpvim"]
+	path = bundle/ctrlpvim
+	url = git@github.com:ctrlpvim/ctrlp.vim.git
