--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "bundle/ctrlpvim"]
 	path = bundle/ctrlpvim
 	url = git@github.com:ctrlpvim/ctrlp.vim.git
+[submodule "bundle/Dockerfile"]
+	path = bundle/Dockerfile
+	url = https://github.com/ekalinin/Dockerfile.vim.git
