--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,24 @@
-set -g default-terminal "xterm"
-
 # remap prefix to Control + a
 set -g prefix C-a
 unbind C-b
 bind C-a send-prefix
+
+# Use vim keybindings in copy mode
+setw -g mode-keys vi
+
+# Setup 'v' to begin selection as in Vim
+# bind-key -t vi-copy v begin-selection
+# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+# unbind -t vi-copy Enter
+# bind-key -c -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+# improve colors
+set -g default-terminal 'screen-256color'
+
+bind-key C-Tab next-window
+bind-key C-S-Tab previous-window
 
 # force a reload of the config file
 unbind r
@@ -13,28 +28,12 @@ bind r source-file ~/.tmux.conf
 unbind ^A
 bind ^A select-pane -t :.+
 
-# Use vim keybindings in copy mode
-setw -g mode-keys vi
+set -g default-shell $SHELL
+set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 
-# Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind r source-file ~/.tmux.conf
 
-# Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-
-# act like vim
-setw -g mode-keys vi
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-bind-key -r C-h select-window -t :-
-bind-key -r C-l select-window -t :+
-
-
-# increase scrollback lines
-set -g history-limit 10000
-
-set-option -sg escape-time 10
+# open a new window in the same directory
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
