Tmux stuff and ultimate config, i guess

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,12 +7,12 @@ bind C-a send-prefix
 setw -g mode-keys vi
 
 # Setup 'v' to begin selection as in Vim
-# bind-key -t vi-copy v begin-selection
-# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Update default binding of `Enter` to also use copy-pipe
-# unbind -t vi-copy Enter
-# bind-key -c -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+unbind -t vi-copy Enter
+bind-key -c -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # improve colors
 set -g default-terminal 'screen-256color'
@@ -28,12 +28,24 @@ bind r source-file ~/.tmux.conf
 unbind ^A
 bind ^A select-pane -t :.+
 
-set -g default-shell $SHELL
-set -g default-command "reattach-to-user-namespace -l ${SHELL}"
-
 bind r source-file ~/.tmux.conf
 
 # open a new window in the same directory
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
+
+# Plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+# Configure tmux continuum auto restore
+set -g @continuum-restore 'on'
+
+# Restore vim sessions
+set -g @resurrect-strategy-vim 'session'
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
