--- a/.gitconfig
+++ b/.gitconfig
@@ -6,7 +6,7 @@
 	ci = commit
 
 	# View abbreviated SHA, description, and history graph of the latest 20 commits
-	l = log --pretty=oneline -n 20 --graph --abbrev-commit
+	lg = log --pretty=oneline -n 20 --graph --abbrev-commit
 
 	# View the current working tree status using the short format
 	s = status -s
@@ -76,3 +76,8 @@
 			git commit --amend -m \"$(git log -1 --pretty=%B)\n\nCloses #$1.\"; \
 		fi \
 	}; f"
+[user]
+	name = Rodrigo Milfont
+	email = rodrigomilfont@gmail.com
+[core]
+	excludesfile = ~/.gitignore
